[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = molecule-hetznercloud
url = https://github.com/ansible-community/molecule-hetznercloud
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-hetznercloud/issues
    Release Management = https://github.com/ansible-community/molecule-hetznercloud/projects
    CI: Travis = https://travis-ci.com/ansible-community/molecule-hetznercloud
    Source Code = https://github.com/ansible-community/molecule-hetznercloud
description = Molecule Hetzner Cloud Plugin :: run molecule tests with hetzner cloud as a provisioner
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Luke Murphy
author_email = lukewm@riseup.net
maintainer = Luke Murphy
maintainer_email = lukewm@riseup.net
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: MIT License

    Natural Language :: English

    Operating System :: OS Independent

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    ansible
    roles
    testing
    molecule
    plugin
    hetznercloud
    verifier

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0
install_requires =
    molecule >= 3.0.3, <= 3.1
    pyyaml >= 5.1, < 6

[options.extras_require]
test =
    hcloud>=1.6.2
    mock>=3.0.5, < 4
    pytest-cov>=2.7.1, < 3
    pytest-helpers-namespace>=2019.1.8, < 2020
    pytest-mock>=1.10.4, < 2
    pytest-verbose-parametrize>=1.7.0, < 2
    pytest-xdist>=1.29.0, < 2
    pytest>=4.6.3, < 5

[options.packages.find]
where = .

[flake8]
max-line-length = 88

[options.entry_points]
molecule.driver =
    hetznercloud = molecule_hetznercloud.driver:HetznerCloud
