[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = molecule-hetznercloud
url = https://git.autonomic.zone/autonomic-cooperative/molecule-hetznercloud
project_urls =
    Bug Tracker = https://git.autonomic.zone/autonomic-cooperative/molecule-hetznercloud/issues
    CI: Drone = https://drone.autonomic.zone/autonomic-cooperative/molecule-hetznercloud/
    Source Code = https://git.autonomic.zone/autonomic-cooperative/molecule-hetznercloud
description = Molecule Hetzner Cloud Plugin :: run molecule tests with hetzner cloud
long_description = file: README.md
long_description_content_type = text/markdown
author = decentral1se
author_email = lukewm@riseup.net
maintainer = decentral1se
maintainer_email = lukewm@riseup.net
license = LGPL
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    ansible
    hetznercloud
    molecule
    plugin
    roles
    testing
    verifier

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False
setup_requires =
    setuptools_scm >= 3.5.0
    setuptools_scm_git_archive >= 1.1
install_requires =
    hcloud >= 1.6.3, < 2
    molecule >= 3.0.3, <= 3.1
    pyyaml >= 5.3.1, < 6

[options.extras_require]
test =
    hcloud >= 1.6.3
    mock >= 4.0.2, < 5
    pytest-cov >= 2.8.1, < 3
    pytest-helpers-namespace >= 2019.1.8, < 2020
    pytest-mock >= 3.1.0, < 4
    pytest-verbose-parametrize>=1.7.0, < 2
    pytest-xdist>=1.31.0, < 2
    pytest>=5.4.1, < 6

[options.packages.find]
where = .

[flake8]
max-line-length = 88

[options.entry_points]
molecule.driver =
    hetznercloud = molecule_hetznercloud.driver:HetznerCloud
