[bdist_wheel]
universal = 1

[metadata]
name = molecule-hetznercloud
url = https://git.autonomic.zone/autonomic-cooperative/molecule-hetznercloud
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-hetznercloud/issues
    CI: Drone = https://drone.autonomic.zone/autonomic-cooperative/molecule-hetznercloud/
    Source Code = https://git.autonomic.zone/autonomic-cooperative/molecule-hetznercloud
description = Molecule Hetzner Cloud Plugin :: run molecule tests with hetzner cloud
long_description = file: README.md
long_description_content_type = text/markdown
author = decentral1se
author_email = lukewm@riseup.net
maintainer = decentral1se
maintainer_email = lukewm@riseup.net
license = LGPL
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    ansible
    hetznercloud
    molecule
    plugin
    roles
    testing
    verifier

[options]
use_scm_version = True
python_requires = >=3.9
packages = find:
include_package_data = True
zip_safe = False
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive
install_requires =
    molecule >= 6.0.0, < 7.0
    # Dependencies for the hetzner.hcloud collection
    requests
    python-dateutil
    # Dependencies for the molecule hetznercloud driver
    netaddr

[options.extras_require]
test =
    pytest-xdist >=3.3.1,<4.0
    pytest >=7.4.0,<8.0
    pytest-ansible >= 4.1.0,<5.0

[options.packages.find]
where = .

[options.entry_points]
molecule.driver =
    molecule_hetznercloud = molecule_hetznercloud.driver:HetznerCloud
